- fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,8 @@
   html,
   body,
   #root {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+    height: 100vh;
+    width: 100vw;
   }
 
   body {
